# path-traced-rendering

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: bilateral_filter.glsl  compute_shader.glsl  path_tracer.glsl  quad.vert  screen.frag  shape.frag  shape.vert
include/: Camera.h  ComputeShader.h  Cube.h  Image.h  Mesh.h  PathTracer.h  Plane.h  PointLight.h  Rasterizer.h  Ray.h  Raycast.h  Renderer.h  Scene.h  SceneObject.h  Shader.h  Sphere.h  Texture.h  UIManager.h
include/rendering/: Camera.h  PathTracer.h  Rasterizer.h  Renderer.h
include/rendering/render-objects/: ComputeShader.h  Framebuffer.h  GPUBuffer.h  Image.h  Texture.h  Window.h
include/scenes/: AreaSphereLight.h  Cube.h  Material.h  Plane.h  PointLight.h  QuadLight.h  Scene.h  SceneObject.h  Sphere.h
planning/: object-manipulation.md
src/: Camera.cpp  ComputeShader.cpp  Cube.cpp  GPUBuffer.cpp  Mesh.cpp  PathTracer.cpp  Plane.cpp  Rasterizer.cpp  Renderer.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  UIManager.cpp  Window.cpp  main.cpp
src/rendering/: Camera.cpp  PathTracer.cpp  Rasterizer.cpp  Renderer.cpp
src/rendering/render-objects/: ComputeShader.cpp  Framebuffer.cpp  GPUBuffer.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/scenes/: Cube.cpp  Plane.cpp  Sphere.cpp
